Added PDF and ended Media doc
